# MLOps2023Course-demo

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/: dependabot.yml
data/processed/: .gitignore
data/raw/: test.csv.dvc  train.csv.dvc
docs/: codecarbon-demo.md  docker-demo.md  dvc-demo.md  fastapi-demo.md  git-demo.md  great-expectations-demo.md  mlflow-demo.md  pytest-demo.md
docs/deployment/: 01_create_api.md  01_deploy_general.md  02_add_models.md  02_deploy_fib.md  03_deploy_aws.md  03_deploy_general.md  04_deploy_fib.md  04_deploy_gcp.md  05_deploy_aws.md  05_deploy_azure.md  06_deploy_gcp.md  06_deploy_okteto.md  07_deploy_azure.md  FAQ.md  README.md
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  iowa_training_suite.json
metrics/: emissions.csv  scores.json
models/: .gitignore  iris_LogisticRegression_model.pkl  iris_SVC_model.pkl
src/: __init__.py  evaluate.py  prepare.py  train.py  train_api_demo_models.py
src/app/: README.md  api.py  models.py  schemas.py  script_test.py  test_models.py
src/features/: prepare.py  validate.py
src/models/: evaluate.py  train.py
tests/: test_api.py  test_models.py
