[tool.poetry]
name = "mlops2023course-demo"
version = "0.1.0"
description = "Demo project for the Machine Learning Systems in Production (MLOps) course."
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
packages = [{include = "mlops2023course_demo"}]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
dvc = "<4.0"
mlflow = "<2.6"
pandas = "<=2.0.3"
scikit-learn = "<=1.3.0"
python-dotenv = "^1.0.0"
codecarbon = "^2.2.7"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:out/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
