[tool.poetry]
name = "mlops2023course-demo"
version = "0.1.0"
description = "Demo project for the Machine Learning Systems in Production (MLOps) course."
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
packages = [{include = "mlops2023course_demo"}]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
dvc = "<=3.28.0"
mlflow = "<=2.8.0"
pandas = "<=2.2"
scikit-learn = "<=1.4"
python-dotenv = "<=1.1"
codecarbon = "<=2.4"
fastapi = "<=0.104.1"
uvicorn = {extras = ["standard"], version = "<=0.24"}
great-expectations = "<=0.18"

[tool.poetry.group.dev.dependencies]
black = "<=23.11.0"
isort = "<=5.13"
bandit = "<=1.8"
pylint = "<=3.0.2"
pytest = "<=7.5"
pytest-cov = "<=4.2"
httpx = "<=0.25"

[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:out/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
