[tool.poetry]
name = "mlops2023course-demo"
version = "0.1.0"
description = "Demo project for the Machine Learning Systems in Production (MLOps) course."
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
packages = [{include = "mlops2023course_demo"}]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
dvc = "<3.31"
mlflow = "<2.9.0"
pandas = "<2.3"
scikit-learn = "<1.5"
python-dotenv = "<1.2"
codecarbon = "<2.5"
fastapi = "<0.105"
uvicorn = {extras = ["standard"], version = "<0.25"}
great-expectations = "<0.19"

[tool.poetry.group.dev.dependencies]
black = "<24.2"
isort = "<5.14"
bandit = "<1.9"
pylint = "<3.1"
pytest = "<8.1"
pytest-cov = "<4.3"
httpx = "<0.26"

[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:out/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
